# statbook

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.rs  builder_pattern.rs
src/: client.rs  config.rs  error.rs  lib.rs  test_utils.rs  utils.rs
src/api/: mod.rs  players.rs
src/config/: news_config.rs
src/models/: fetch.rs  mod.rs  news.rs  news_parser.rs  player.rs  player_parser.rs  response.rs  result_types.rs
src/models/parsers/: mod.rs
src/providers/: mock_providers.rs  mod.rs  news_provider.rs  stats_provider.rs
