[package]
name = "statbook"
version = "0.0.3"
edition = "2021"
description = "A Rust library for accessing sports statistics and data (early development)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/daguenette/statbook"
keywords = ["sports", "statistics", "nfl", "api", "data"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1"
base64 = "0.22.1"
reqwest = "0.12.22"
thiserror = "2.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
